fixing overlay and z-index issues in Portfolio.js

--- a/src/components/Portfolio/Portfolio.scss
+++ b/src/components/Portfolio/Portfolio.scss
@@ -5,6 +5,35 @@
 .absoluteContainer {
     @extend %absoluteContainer;
 
+    .overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #000;
+        /* transition: opacity 0.5s cubic-bezier(0.5, 0.5, 0.2, 1), z-index 0s 0.5s; */
+
+
+        &.visible {
+            z-index: 10;
+            opacity: 1;
+        }
+
+        &.transitionVisible {
+            transition: opacity 0.5s cubic-bezier(0.5, 0.5, 0.2, 1);
+        }
+
+        &.hidden {
+            z-index: -2;
+            opacity: 0;
+        }
+
+        &.transitionHidden {
+            transition: opacity 1.5s cubic-bezier(0.5, 0.5, 0.2, 1), z-index 0s 1s;
+        }
+    }
+
     .container {
         display: grid;
         width: 100vw;
